tests/semantic/fail/var-9.tiger
let
	var a : int := b
	var b : int := 0
in
end
